# invocable_traits

./: .clang-format  .gitignore  CMakeLists.txt  README.md  marcorubini_invocable_traits-config.cmake  ruby_invocable_traits-config.cmake
include/invocable_traits/: function_traits.hpp  invocable_traits.hpp  member_function_pointer_traits.hpp
include/marcorubini/invocable_traits/: invocable_traits.hpp  member_object_pointer_traits.hpp
include/ruby/invocable_traits/: function_traits.hpp  invocable_traits.hpp  member_function_pointer_traits.hpp  member_object_pointer_traits.hpp
single_include/: invocable_traits.hpp
test/: CMakeLists.txt  constexpr_tests.cpp
test/traits/: function_tests.hpp  invocable_tests.hpp  member_function_pointer_tests.hpp  member_object_pointer_tests.hpp
test_package/: CMakeLists.txt  test.cpp
